--- a/loading.html
+++ b/loading.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <video autoplay muted loop>
-        <source src="https://drive.google.com/file/d/1zhW9-wUe5ozNJDw7vVOAN4dzX_FAXjxx/view?usp=sharing" type="video/mp4">
+        <source src="https://drive.google.com/file/d/1zhW9-wUe5ozNJDw7vVOAN4dzX_FAXjxx/view?usp=drive_link" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
